--- a/DQD/Pages/ContentPage.xaml
+++ b/DQD/Pages/ContentPage.xaml
@@ -46,6 +46,17 @@
                                 <Thickness>50,0,0,0</Thickness>
                             </Setter.Value>
                         </Setter>
+                        <Setter Target="TitleGrid.(FrameworkElement.Margin)">
+                            <Setter.Value>
+                                <Thickness>0,16,0,0</Thickness>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Target="ContentBord.(FrameworkElement.Margin)">
+                            <Setter.Value>
+                                <Thickness>0,76,0,0</Thickness>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Target="TitleBorder.(FrameworkElement.Height)" Value="76"/>
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Mobile480">
@@ -61,6 +72,17 @@
                                 <Thickness>50,0,0,0</Thickness>
                             </Setter.Value>
                         </Setter>
+                        <Setter Target="TitleGrid.(FrameworkElement.Margin)">
+                            <Setter.Value>
+                                <Thickness>0,16,0,0</Thickness>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Target="ContentBord.(FrameworkElement.Margin)">
+                            <Setter.Value>
+                                <Thickness>0,76,0,0</Thickness>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Target="TitleBorder.(FrameworkElement.Height)" Value="76"/>
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Desktop">
@@ -77,10 +99,15 @@
         <!--#endregion-->
 
         <!--#region Content-->
-        <Grid Background="{ThemeResource DQDBackground}"
+        <Border Name="TitleBorder"
+                VerticalAlignment="Top"
                 Height="60"
-                VerticalAlignment="Top">
-            <Button x:Name="BackBtn"
+                Background="{ThemeResource DQDBackground}">
+            <Grid Name="TitleGrid" 
+                  Background="{ThemeResource DQDBackground}"
+                  Height="60"
+                  VerticalAlignment="Top">
+                <Button x:Name="BackBtn"
                     Style="{StaticResource MainPagePopupButtonStyle}"
                     Content="&#xE0A6;"
                     FontFamily="Segoe MDL2 Assets"
@@ -88,21 +115,23 @@
                     Click="BackBtn_Click"
                     Visibility="Collapsed"
                     Foreground="{ThemeResource AppPersonalTextColorPure}"/>
-            <TextBlock x:Name="ContentTitle"
+                <TextBlock x:Name="ContentTitle"
                        FontSize="22"
                        Margin="15,2,0,2"
                        HorizontalAlignment="Left"
                        VerticalAlignment="Center"
                        Foreground="{ThemeResource AppPersonalTextColorPure}"/>
-            <Rectangle Height="1"
+                <Rectangle Height="1"
                        Fill="{ThemeResource DQDSummTextColor}"
                        VerticalAlignment="Bottom"/>
-            <Rectangle Height="30" Width="10"
+                <Rectangle Height="30" Width="10"
                        Fill="#F0F0F0"
                        HorizontalAlignment="Left"/>
-        </Grid>
+            </Grid>
+        </Border>
 
-        <Border Background="{ThemeResource AppPersonalExtraBackground}"
+        <Border Name="ContentBord" 
+                Background="{ThemeResource AppPersonalExtraBackground}"
                 Margin="0,60,0,0">
             <ScrollViewer Name="ContentScroll">
                 <StackPanel >
