--- a/DQD/Pages/PreparePage.xaml
+++ b/DQD/Pages/PreparePage.xaml
@@ -2,7 +2,7 @@
     x:Class="DQD.Net.Pages.PreparePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Noodles_Blog_UWP.Pages"
+    xmlns:local="using:DQD.Net.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:base="using:DQD.Core.Controls"
@@ -32,6 +32,7 @@
                         <AdaptiveTrigger MinWindowWidth="0"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
+                        <Setter Target="BackImage.(FrameworkElement.Source)" Value="/Assets/dqd01.jpg"/>
                         <Setter Target="LogeImage.(FrameworkElement.Margin)">
                             <Setter.Value>
                                 <Thickness>0,0,0,40</Thickness>
@@ -44,6 +45,7 @@
                         <AdaptiveTrigger MinWindowWidth="361"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
+                        <Setter Target="BackImage.(FrameworkElement.Source)" Value="/Assets/dqd01.jpg"/>
                         <Setter Target="LogeImage.(FrameworkElement.Margin)">
                             <Setter.Value>
                                 <Thickness>0,0,0,60</Thickness>
@@ -56,7 +58,8 @@
                         <AdaptiveTrigger MinWindowHeight="400" MinWindowWidth="800"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        
+                        <Setter Target="LogeImage.(FrameworkElement.Source)" Value="/Assets/SplashScreen.scale-200.png"/>
+                        <Setter Target="LogeImage.(FrameworkElement.Width)" Value="600"/>
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
@@ -72,7 +75,8 @@
             <ColumnDefinition Width="4*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Image Name="BackImage" Source="ms-appx:///Assets/38565-105.jpg"
+        <Image Name="BackImage" 
+               Source="ms-appx:///Assets/bg7.jpg"
                Grid.ColumnSpan="3"
                Grid.RowSpan="3"
                Stretch="UniformToFill"/>
@@ -84,7 +88,8 @@
             <Image Name="LogeImage" Stretch="Uniform" 
                    RelativePanel.AlignVerticalCenterWithPanel="True"
                    RelativePanel.AlignHorizontalCenterWithPanel="True"
-                   Source="ms-appx:///Assets/Square310x310Logo.png" />
+                   Source="ms-appx:///Assets/Square310x310Logo.png" 
+                   Width="200"/>
         </RelativePanel>
         <Grid Grid.Row="2" Grid.Column="1" >
             <ProgressBar Name="progressBar" Maximum="1000" Value="0" 
